# foundersNexusBackend

./: .gitignore  DataDictionary.md  README.md  main.py  pyproject.toml  requirements.txt  vercel.json
api/: main.py
config/: database.py
controllers/: CommentController.py  EntrepreneurController.py  InvestorController.py  PitchDeckController.py  PostController.py  RoleController.py  StartupController.py  UserController.py
models/: ChatModel.py  CommentModel.py  EntrepreneurModel.py  InvestorModel.py  PitchDeckModel.py  PostModel.py  RoleModel.py  StartupModel.py  UserModel.py
routes/: CommentRoutes.py  EntrepreneurRoutes.py  InvestorRoutes.py  PitchDeckRoutes.py  PostRoutes.py  RoleRoutes.py  StartupRoutes.py  UserRoutes.py
scripts/: migrate_users_to_cometchat.py
utils/: CloudinaryUpload.py  CometChatIntegration.py  SendMail.py
